Remove graal dependencies Remove SVMConfiguration